Fixed prettify function

--- a/CleanConverter/config.json
+++ b/CleanConverter/config.json
@@ -1,13 +1,13 @@
 {
     "request_existing_files": false,
     "new_html": true,
-    "write_to_pdf": true,
+    "write_to_pdf": false,
     "input_csv": "kb_urls.csv",
     "output_html": "output.html",
     "output_pdf": "output.pdf",
     "number_of_rows": -1,
     "add_depth": true,
-    "prettify_html":  true,
+    "prettify_html": true,
     "flatten_internal_contents": true,
     "min_sleep_time": 10,
     "catch-OSError": true,
