Added basic table of contents

--- a/CleanConverter/config.json
+++ b/CleanConverter/config.json
@@ -1,11 +1,12 @@
 {
     "request_existing_files": false,
     "new_html": true,
-    "write_to_pdf": false,
+    "write_to_pdf": true,
     "input_csv": "kb_urls.csv",
     "output_html": "output.html",
-    "output_pdf": "output.pdf",
+    "output_pdf": "MariaDBServerKnowledgeBase.pdf",
     "number_of_rows": -1,
+    "add_contents": true,
     "add_depth": true,
     "prettify_html": true,
     "flatten_internal_contents": true,
