--- a/CleanConverter/config.json
+++ b/CleanConverter/config.json
@@ -4,8 +4,9 @@
     "write_to_pdf": true,
     "input_csv": "kb_urls.csv",
     "output_html": "output.html",
-    "output_pdf": "MariaDBServerKnowledgeBase.pdf",
+    "output_pdf": "contents.pdf",
     "number_of_rows": -1,
+    "add_body": true,
     "add_contents": true,
     "add_depth": true,
     "prettify_html": true,
@@ -16,6 +17,7 @@
     "css-link": "",
     "path_to_app": "wkhtmltopdf.exe",
     "options": {
+        "disable-javascript": true,
         "page-size": "A4",
         "margin-bottom": "1cm",
         "zoom": 1,
