Fixed replacement issue

--- a/CleanConverter/config.json
+++ b/CleanConverter/config.json
@@ -3,13 +3,14 @@
     "new_html": true,
     "write_to_pdf": true,
     "input_csv": "kb_urls.csv",
-    "output_html": "outputa.html",
+    "output_html": "output.html",
     "output_pdf": "MariaDBServerKnowledgeBase.pdf",
     "number_of_rows": -1,
     "quality": 1,
     "add_body": true,
     "add_contents": true,
     "add_depth": true,
+    "logging": true,
     "alert_on_pdf": true,
     "alert_on_html": false,
     "prettify_html": false,
