--- a/CleanConverter/config.json
+++ b/CleanConverter/config.json
@@ -6,29 +6,36 @@
     "output_html": "output.html",
     "output_pdf": "MariaDBServerKnowledgeBase.pdf",
     "number_of_rows": -1,
+    "page-break-length": 350,
     "quality": 1,
     "add_body": true,
     "add_contents": true,
     "add_depth": true,
     "logging": true,
+    "remove_media_background": false,
     "alert_on_pdf": true,
     "alert_on_html": false,
+    "colour_external_links": true,
+    "external_link_colour": "#ff0000",
     "prettify_html": false,
     "flatten_internal_contents": true,
     "min_sleep_time": 10,
     "catch-OSError": false,
-    "page-break": false,
+    "page-break": true,
     "css-link": "",
     "path_to_app": "wkhtmltopdf.exe",
     "options": {
-        "DPI": 100,
+        "DPI": 96,
         "page-size": "A4",
-        "footer-font-size": 10,
-        "margin-bottom": "1cm",
+        "footer-font-size": 9,
+        "margin-top": "0.6cm",
+        "margin-bottom": "0.6cm",
+        "margin-right": "0.6cm",
+        "margin-left": "0.6cm",
         "zoom": 1,
         "footer-right": "[page]/[topage]",
         "encoding": "UTF-8",
         "footer-line": "",
-        "disable-javascript": true
+        "disable-javascript": false
     }
 }
