Added font weight scaling for the toc however the font currently does not support that

--- a/CleanConverter/config.json
+++ b/CleanConverter/config.json
@@ -5,7 +5,7 @@
     "input_csv": "kb_urls.csv",
     "output_html": "output.html",
     "output_pdf": "MariaDBServerKnowledgeBase.pdf",
-    "number_of_rows": -1,
+    "number_of_rows": 50,
     "page-break-length": 350,
     "quality": 1,
     "add_body": true,
@@ -16,7 +16,7 @@
     "alert_on_pdf": true,
     "alert_on_html": false,
     "colour_external_links": true,
-    "external_link_colour": "#ff0000",
+    "external_link_colour": "#150281",
     "prettify_html": false,
     "flatten_internal_contents": true,
     "min_sleep_time": 10,
@@ -25,7 +25,7 @@
     "css-link": "",
     "path_to_app": "wkhtmltopdf.exe",
     "options": {
-        "DPI": 96,
+        "DPI": 120,
         "page-size": "A4",
         "footer-font-size": 9,
         "margin-top": "0.6cm",
